[package]
name = "riscv-target"
version = "0.1.1"
repository = "https://github.com/ilya-epifanov/riscv-target"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
categories = ["embedded"]
description = "RISC-V target string manipulation utilities"
keywords = ["riscv"]
license = "ISC"
edition = "2018"

[dependencies]
regex = "1"
lazy_static = "1"
